munit/v/1.2/munit-matchers.adoc
=  MUnit Matchers
：version-info：3.7.0及更高版本
:keywords: munit, testing, unit testing

== 概述

MUnit匹配器是一组MEL函数，可帮助创建模拟和验证（验证/断言）。它们使您能够根据常规值而不是特定的硬编码值来定义模拟，验证和断言。

匹配器是一个布尔函数。在大多数MUnit匹配器中，此函数是类类型比较。其目的是验证参数是否属于某个类的类型。

匹配器不接收参数;相反，它本身就是一个参数。

下表列出了可用的MUnit匹配器。

[%header%autowidth.spread]
.MUnit匹配器函数
|===
| 匹配器名称 | 描述

| `isNull()`
|匹配评估对象是否为`Null`。

| `isNotNull()`
|如果评估对象不是`Null`，则匹配。

| `anyObject()`
|匹配评估对象是否为`Object`。

| `anyBoolean()`
|匹配评估对象是否为`Boolean`。

| `anyByte()`
|匹配评估对象是否为`Byte`。

| `anyByteArray()`。
|匹配评估对象是否为`ByteArray`。

| `anyInt()`
|匹配评估对象是否为`Integer`。

| `anyDouble()`
|匹配评估对象是否为`Double`。

| `anyFloat()`
|匹配评估对象是否为`Float`。

| `anyShort()`
|匹配评估对象是否为`Short`。

| `anyString()`
|匹配评估对象是否为`String`。

| `anyCollection()`
|匹配评估对象是否为`Collection`。

| `anyList()`
|匹配评估对象是否为`List`。

| `anySet()`
|匹配评估对象是否为`Set`。

| `anyMap()`
|匹配评估对象是否为`Map`。

|===

MUnit还提供了一些额外的，相当具体的匹配器类型。这些匹配器评估参数的_content_，而不是其类型;即使如此，他们也不以具体的价值评估。

[%header%autowidth.spread]
.MUnit匹配器函数
|===
| 匹配器名称 | 描述

| `matchRegex(<regex>)`
|如果测试运行期间属性的值验证用户提供的正则表达式，则匹配。

| `matchContains(<string_to_look_for>)`
|如果测试期间属性的值运行_contains_指定的用户提供的字符串，则匹配。

|===

== 应用MUnit匹配器

就本文件而言，我们假设我们正在测试以下Mule代码：


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set-variable-munit-matcher.png[set-variable-munit-matcher]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<flow name="exampleFlow">
  <set-variable variableName="#['my_variable']" value="#['some_string']" doc:name="Variable"/>
</flow>
----
....
------

注意：MUnit匹配器与 link:/munit/v/1.2/mock-message-processor[嘲弄]， link:/munit/v/1.2/spy-message-processor[间谍]， link:/munit/v/1.2/verify-message-processor[校验]和 link:/munit/v/1.2/assertion-message-processor[断言]消息处理器结合使用，但从未自行使用。

=== 在模拟定义中使用MUnit匹配器

与MUnit Matchers结合使用时，模拟消息处理器允许您创建与值之外的信息相匹配的模拟，例如特定属性的内容类型。在下面的示例中，当且仅当属性`value`的内容为`String`类型时，模拟匹配。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:mock-munit-matchers.png[mock-munit-matchers]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<mock:when messageProcessor="mule:set-variable">
  <mock:with-attributes>
    <mock:with-attribute whereValue="#['my_variable']" name="variableName"/>
    <mock:with-attribute whereValue="#[anyString()]" name="value"/>
  </mock:with-attributes>
</mock:when>
----
....
------

在上面的例子中，当且仅当属性`value`的内容为`String`时，被测试代码到达`set-variable`消息处理器时才会触发模拟定义，忽略实际字符串值。

如果不使用匹配器，产生匹配的唯一方法是评估字面值。如果测试代码发生变化，则属性`value`的内容可能也会更改，您的测试将失败。

=== 在验证定义中使用MUnit Matchers

与MUnit Matchers结合使用时，验证消息处理器允许您验证何时通过匹配除值之外的其他信息（例如特定属性的内容类型）来调用消息处理器。在下面的示例中，当且仅当`set-variable`消息处理器设置了内容类型`String`的变量`my_variable`时，验证才会成功。
解决用例如下：


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:verify-definition.png[verify-definition]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<mock:verify-call messageProcessor="mule:set-variable" times="1" doc:name="Verify Call">
  <mock:attributes>
    <mock:with-attribute whereValue="#['my_variable']" name="variableName"/>
    <mock:attribute whereValue="#[anyString()]" name="value"/>
  </mock:attributes>
</mock:verify-call>
----

....
------

=== 在间谍定义中使用MUnit Matchers

与MUnit Matchers结合使用时，Spy消息处理器允许您窥探与值之外的信息匹配的消息处理器，例如特定属性的内容类型。在下面的示例中，当且仅当`set-variable`消息处理器已设置内容类型`String`的变量`my_variable`时，才可以检测测试代码中的消息处理器。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:spy-with-assert-match.png[spy-with-assert-match]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<mock:spy messageProcessor="mule:set-payload" doc:name="Spy">
  <mock:with-attributes>
    <mock:with-attribute whereValue="#['my_variable']" name="variableName"/>
    <mock:attribute whereValue="#[anyString()]" name="value"/>
  </mock:with-attributes>
  <mock:assertions-before-call>
    <!-- Define actions -->
  </mock:assertions-before-call>
  <mock:assertions-after-call>
    <!-- Define actions -->
  </mock:assertions-after-call>
</mock:spy>
----
....
------


=== 在断言定义中使用MUnit匹配器

当与MUnit匹配器结合使用时，您可以大大增强Assert消息处理器的强大功能，例如，通过验证Mule消息的内容属于特定类型。 +
下面的例子验证了Mule消息的内容是一个布尔值。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-anyboolean-munit-matchers.png[assert-anyboolean-munit-matchers]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:test name="munit-test-suite-exampleFlowTest" description="Test">
    <flow-ref name="exampleFlow" doc:name="Flow-ref to exampleFlow"/>
    <munit:assert-true message="oops!" condition="#[valueOf(payload).is(anyBoolean())]" />
</munit:test>
----
....
------

注意属性`condition`的内容：

[source, xml, linenums]
----
#[
valueOf(payload)    //<1>
.is(anyBoolean())   //<2>
]
----
<1>为有效负载创建一个`ElementMatcher`。
<2>在Mule消息的有效载荷上运行`anyBoolean()` MUnit匹配器。

在这个例子中，我们首先需要为有效载荷创建一个_ElementMatcher_（*1*）。然后，我们可以通过调用方法`is()`（*2*）让`ElementMatcher`在其自身上运行`anyBoolean()`匹配器。

Mule消息属性中的====  MUnit匹配器

如果您希望通过Mule消息属性运行断言并使用MUnit匹配器，则可以使用`valueOf()`函数。例如：


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-variable-isboolean-munit-matcher.png[assert-variable-isboolean-munit-matcher]
....
[tab,title="XML or Standalone Editor"]
....
<munit:test name="munit-test-suite-exampleFlowTest" description="Test">
        <flow-ref name="exampleFlow" doc:name="Flow-ref to exampleFlow"/>
        <munit:assert-true message="oops!" condition="#[valueOf(flowVars['my_variable']).is(anyBoolean())]" />
</munit:test>
....
------

为了便于编写这种类型的断言，MUnit提供了另一组MEL函数，它们可以直接访问Mule消息的属性`ElementMatcher`。

[%header%autowidth.spread]
|===
|功能  |说明

| `messageInboundProperty(propertyName)`
|使用提供的名称返回`inbound`属性的ElementMatcher。

| `messageOutboundProperty(propertyName)`
|使用提供的名称返回`outbound`属性的ElementMatcher。

| `messageInvocationProperty(propertyName)`
|使用提供的名称返回`invocation`属性的ElementMatcher。

| `messageInboundAttachment(propertyName)`
|使用提供的名称返回`inbound`附件的ElementMatcher。

| `messageOutboundAttachment(propertyName)`
|使用提供的名称返回`outbound`附件的ElementMatcher。

|===

有了这些函数，您可以将上面的示例更改为：


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-invocation-property-example.png[assert-invocation-property-example]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:test name="munit-test-suite-exampleFlowTest" description="Test">
    <flow-ref name="exampleFlow" doc:name="Flow-ref to exampleFlow"/>
    <munit:assert-true message="oops!" condition="#[messageInvocationProperty('my_variable').is(anyBoolean())]" doc:name="Assert True"/>
</munit:test>
----
....
------

